WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55947
The first time animations are committed they have a bad start time
https://bugs.webkit.org/show_bug.cgi?id=55947
Summary
The first time animations are committed they have a bad start time
Chris Marrin
Reported
2011-03-08 09:53:13 PST
The animationStarted time fed to the animation controller from CACFLayerTreeHost is derived from WKCACFViewGetLastCommitTime, corrected for the difference between media time (which CACF uses) and system time (which WebKit uses). But the first time a render is performed WKCACFViewGetLastCommitTime is zero. We should check for this case and correct it so webkit doesn't think animations started in the distant past.
Attachments
Patch
(1.57 KB, patch)
2011-03-08 10:04 PST
,
Chris Marrin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2011-03-08 10:04:10 PST
Created
attachment 85056
[details]
Patch
Chris Marrin
Comment 2
2011-03-08 10:30:14 PST
Landed in
http://trac.webkit.org/changeset/80570
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug