2011-03-08  Chris Marrin  <cmarrin@apple.com>

Reviewed by Darin Adler.

        The first time animations are committed they have a bad start time
        https://bugs.webkit.org/show_bug.cgi?id=55947

        Do a check for a returned lastCommitTime of <=0 and replace it
        with the mediaTime.


        * platform/graphics/ca/win/CACFLayerTreeHost.cpp:
        (WebCore::CACFLayerTreeHost::notifyAnimationsStarted):




Canonical link: https://commits.webkit.org/70464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80570 268f45cc-cd09-0410-ab3c-d52691b4dbfc